@@ -71,10 +71,13 @@ $m->comp("/widgets/wrappers/sharky/table_bottom.mc");
 $m->comp("/widgets/wrappers/sharky/table_top.mc",
            caption => "Keywords", number  => 2);
 my $kws = $cat->get_keywords;
+# This prevents an alert demanding you fill in the required 'Name'
+my $meths = get_package_name('keyword')->my_meths;
+$meths->{name}{req} = 0;
 $m->comp('/widgets/add_more/add_more.mc', type => 'keyword', param => \%ARGS,
          fields => [qw(keyword)], name => 'keyword', deleteLabelOnly => 1,
          reset_key => $reset, objs => $kws, incr => 4, no_edit => [qw(keyword)],
-         num => @$kws >= 4 ? @$kws + 2 : 4, read_only => $no_edit,
+         num => @$kws >= 4 ? @$kws + 2 : 4, read_only => $no_edit, meths => $meths,
          formName => 'cat_profile');
 $m->comp("/widgets/wrappers/sharky/table_bottom.mc");
 
